CursoController y View Curso creado
Se ordenó el código en distintos controladores y vistas.

--- a/Views/Curso/Cursos.cshtml
+++ b/Views/Curso/Cursos.cshtml
@@ -28,8 +28,8 @@
                                     <h5 class="card-title">@cursos.Titulo</h5>
                                     <p class="footer-precio card-text">$@cursos.Precio</p>
                                     <div class="btn-footer">
-                                        <a href="/home/ComprarCurso/@cursos.ID" class="carrito-btn col-md-6">COMPRAR</a>
-                                        <a href="/home/CursoInformacion/@cursos.ID" class="info-btn col-md-6" target="_blank">SABER MÁS</a>
+                                        <a href="/curso/ComprarCurso/@cursos.ID" class="carrito-btn col-md-6">COMPRAR</a>
+                                        <a href="/curso/CursoInformacion/@cursos.ID" class="info-btn col-md-6" target="_blank">SABER MÁS</a>
                                     </div>
                                 </div>
                             </div>
@@ -42,7 +42,7 @@
             <section class="regular slider">
                 @foreach (Curso cursos in Model)
                 {
-                    if(@cursos.Categoria == 2)
+                    if(@cursos.Categoria == 3)
                     {
                         
                             <div class="card" style="width: 18rem; height: 25rem;">
@@ -51,8 +51,8 @@
                                     <h5 class="card-title">@cursos.Titulo</h5>
                                     <p class="footer-precio card-text">$@cursos.Precio</p>
                                     <div class="btn-footer">
-                                    <a href="/home/ComprarCurso/@cursos.ID" class="carrito-btn col-md-6">COMPRAR</a>
-                                    <a href="/home/CursoInformacion/@cursos.ID" class="info-btn col-md-6" target="_blank">SABER MÁS</a>
+                                    <a href="/curso/ComprarCurso/@cursos.ID" class="carrito-btn col-md-6">COMPRAR</a>
+                                    <a href="/curso/CursoInformacion/@cursos.ID" class="info-btn col-md-6" target="_blank">SABER MÁS</a>
                                     </div>
                                 </div>
                             </div>
@@ -65,7 +65,7 @@
             <section class="regular slider">
                 @foreach (Curso cursos in Model)
                 {
-                    if(@cursos.Categoria == 3)
+                    if(@cursos.Categoria == 2)
                     {
                         
                             <div class="card" style="width: 18rem; height: 25rem;">
@@ -74,8 +74,8 @@
                                     <h5 class="card-title">@cursos.Titulo</h5>
                                     <p class="footer-precio card-text">$@cursos.Precio</p>
                                     <div class="btn-footer">
-                                    <a href="/home/ComprarCurso/@cursos.ID" class="carrito-btn col-md-6">COMPRAR</a>
-                                    <a href="/home/CursoInformacion/@cursos.ID" class="info-btn col-md-6" target="_blank">SABER MÁS</a>
+                                    <a href="/curso/ComprarCurso/@cursos.ID" class="carrito-btn col-md-6">COMPRAR</a>
+                                    <a href="/curso/CursoInformacion/@cursos.ID" class="info-btn col-md-6" target="_blank">SABER MÁS</a>
                                     </div>
                                 </div>
                             </div>
@@ -97,8 +97,8 @@
                                     <h5 class="card-title">@cursos.Titulo</h5>
                                     <p class="footer-precio card-text">$@cursos.Precio</p>
                                     <div class="btn-footer">
-                                    <a href="/home/ComprarCurso/@cursos.ID" class="carrito-btn col-md-6">COMPRAR</a>
-                                    <a href="/home/CursoInformacion/@cursos.ID" class="info-btn col-md-6" target="_blank">SABER MÁS</a>
+                                    <a href="/curso/ComprarCurso/@cursos.ID" class="carrito-btn col-md-6">COMPRAR</a>
+                                    <a href="/curso/CursoInformacion/@cursos.ID" class="info-btn col-md-6" target="_blank">SABER MÁS</a>
                                     </div>
                                 </div>
                             </div>
