--- a/Views/Shared/_LayoutWithUser.cshtml
+++ b/Views/Shared/_LayoutWithUser.cshtml
@@ -28,7 +28,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Cursos">Cursos</a>
+                            <a class="nav-link" asp-area="" asp-controller="Curso" asp-action="Cursos">Cursos</a>
                         </li>
 
                         <li class="nav-item">
@@ -44,7 +44,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="MisCursos">Mis Cursos</a>
+                            <a class="nav-link" asp-area="" asp-controller="Curso" asp-action="MisCursos">Mis Cursos</a>
                         </li>
                     </ul>
                 </div>
