--- a/Views/Shared/_LayoutWithoutUser.cshtml
+++ b/Views/Shared/_LayoutWithoutUser.cshtml
@@ -28,7 +28,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Cursos">Cursos</a>
+                            <a class="nav-link" asp-area="" asp-controller="Curso" asp-action="Cursos">Cursos</a>
                         </li>
 
                         <li class="nav-item">
