Fix errores de redireccionamiento de vistas

--- a/Views/Curso/NuevoCurso.cshtml
+++ b/Views/Curso/NuevoCurso.cshtml
@@ -10,9 +10,9 @@
           <iframe onload="cursoExist()" src="/default.asp" style="position: absolute; top: -1000px;"></iframe>
     }
     <input type="text" class="contact-form-text" name="nombre" placeholder="Nombre del curso" required>
-    <input type="text" class="contact-form-text" name="precio" placeholder="Precio del curso" required>
+    <input type="text" class="contact-form-text" name="precio" placeholder="Precio del curso" required onkeypress='return validaNumericosPrecio(event)'>
     <input type="text" class="contact-form-text" name="url" placeholder="Url del video" required>
-    <input type="text" class="contact-form-text" name="cantidad" placeholder="Cantidad de videos" required>
+    <input type="text" class="contact-form-text" name="cantidad" placeholder="Cantidad de videos" required onkeypress='return validaNumericosCantidad(event)'>
     <input type="text" class="contact-form-text" name="autor" placeholder="Nombre del autor del curso" required>
     <div class="custom-select" style="width:200px;">
           <select name="categoria" required>
