--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -81,7 +81,7 @@
   <div class="container">
     <div class="row">
 
-        <div class="profile-card col-md-4">
+        <div class="profile-card col-lg-4 col-md-12 col-sm-12">
           <div class="card-header">
             <div class="pic">
               <img src="~/img/Profesor1.jpg" alt="">
@@ -97,7 +97,7 @@
           </div>
         </div>
 
-        <div class="profile-card col-md-4">
+        <div class="profile-card col-lg-4 col-md-12 col-sm-12">
           <div class="card-header">
             <div class="pic">
               <img src="~/img/Profesor2.jpg" alt="">
@@ -113,12 +113,12 @@
           </div>
         </div>
 
-        <div class="profile-card col-md-4">
+        <div class="profile-card col-lg-4 col-md-12 col-sm-12">
           <div class="card-header">
             <div class="pic">
               <img src="~/img/Profesor3.jpg" alt="">
             </div>
-            <div class="name">Hernán Vega</div>
+            <div class="name">Agustín Disalvo</div>
             <div class="desc">Developer & Designer</div>
             <div class="sm">
               <a href="#" class="fab fa-facebook-f"></a>
