--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -17,16 +17,16 @@
                     <p class="error-credenciales">Ya existe un usuario registrado con ese mail o username.</p>
                 }
                 <div class="form-group">
-                    <input class="un " type="email"  name="mail" placeholder="Correo electrónico" align="center"/>
+                    <input class="un " type="email"  name="mail" placeholder="Correo electrónico" align="center" required/>
                 </div>
                 <div class="form-group">
-                    <input class="pass" name="nombre" placeholder="Nombre" />
+                    <input class="pass" name="nombre" placeholder="Nombre" required/>
                 </div>
                 <div class="form-group">
-                    <input class="pass" name="username" placeholder="Nickname"/>
+                    <input class="pass" name="username" placeholder="Nickname" required/>
                 </div>
                 <div class="form-group">
-                    <input class="pass" type="password" name="password" placeholder="Contraseña"/>
+                    <input class="pass" type="password" name="password" placeholder="Contraseña" required/>
                 </div>
 
                 <div class="check-group">
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="form-group">
-                     <input class="un " name="claveadmin" id="boton" placeholder="Clave de administrador" readonly />
+                     <input class="un " type="password" name="claveadmin" id="boton" placeholder="Clave de administrador" readonly />
                 </div>
                 <button type="submit" class="submit" align="center">Registrarse</button>
             </form>
