--- a/Views/Curso/Cursos.cshtml
+++ b/Views/Curso/Cursos.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css" integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="~/css/cursos.css"/>
+    
 }
 
 
@@ -22,7 +23,7 @@
                     if(@cursos.Categoria == 1)
                     {
                         
-                            <div class="card" style="width: 19rem; height: 25rem;">
+                            <div class="card" style="height: 25rem;">
                                 <img src="~/img/imgDatos.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">@cursos.Titulo</h5>
