--- a/Views/Curso/Cursos.cshtml
+++ b/Views/Curso/Cursos.cshtml
@@ -24,7 +24,7 @@
                     {
                         
                             <div class="card" style="height: 25rem;">
-                                <img src="~/img/imgDatos.jpg" class="card-img-top" alt="...">
+                                <img src="@cursos.UrlImage" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">@cursos.Titulo</h5>
                                     <p class="footer-precio card-text">$@cursos.Precio</p>
@@ -47,7 +47,7 @@
                     {
                         
                             <div class="card" style="width: 18rem; height: 25rem;">
-                                <img src="~/img/imgWeb.jpg" class="card-img-top" alt="...">
+                                <img src="@cursos.UrlImage" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">@cursos.Titulo</h5>
                                     <p class="footer-precio card-text">$@cursos.Precio</p>
@@ -70,7 +70,7 @@
                     {
                         
                             <div class="card" style="width: 18rem; height: 25rem;">
-                                <img src="~/img/imgVideojuegos.jpg" class="card-img-top" alt="...">
+                                <img src="@cursos.UrlImage" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">@cursos.Titulo</h5>
                                     <p class="footer-precio card-text">$@cursos.Precio</p>
@@ -93,7 +93,7 @@
                     {
                         
                             <div class="card" style="width: 18rem; height: 25rem;">
-                                <img src="~/img/imgMobile.png" class="card-img-top" alt="...">
+                                <img src="@cursos.UrlImage" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">@cursos.Titulo</h5>
                                     <p class="footer-precio card-text">$@cursos.Precio</p>
