--- a/Views/Curso/EditarCurso.cshtml
+++ b/Views/Curso/EditarCurso.cshtml
@@ -11,27 +11,27 @@
     <input type="text" class="contact-form-text" name="url" value="@Model.Url" required>
     <input type="text" class="contact-form-text" name="cantidad" value="@Model.CantidadVideos" required onkeypress='return validaNumericosCantidad(event)'>
     <input type="text" class="contact-form-text" name="autor" value="@Model.Autor" required>
-    <div class="custom-select" style="width:200px;">
-          <select name="categoria" required>
-          <option value="1">Base de Datos</option>
-          <option value="2">Desarrollo de Videojuegos</option>
-          <option value="4">Desarrollo Mobile</option>
-          <option value="3">Desarrollo Web</option>
-          </select>
-     </div>
-     <div class="custom-select" style="width:200px;">
-          <select name="idioma" required>
-          <option value="Español">Español</option>
-          <option value="Inglés">Inglés</option>
-          <option value="Portugués">Portugués</option>
-          </select>
-     </div>
-     <div class="custom-select" style="width:200px;">
-          <select name="subtitulos" required>
-          <option value="Si">Si</option>
-          <option value="No">No</option>
-          </select>
-     </div>
+    <input type="text" class="contact-form-text" name="urlimagen" value="@Model.UrlImage" required>
+    <p class="categoria-curso">Categoria del curso</p>
+     <select name="categoria" required>
+     <option value="1">Base de Datos</option>
+     <option value="2">Desarrollo de Videojuegos</option>
+     <option value="4">Desarrollo Mobile</option>
+     <option value="3">Desarrollo Web</option>
+     </select>
+
+     <p class="idioma-curso">Idioma del curso</p>
+     <select name="idioma" required>
+     <option value="Español">Español</option>
+     <option value="Inglés">Inglés</option>
+     <option value="Portugués">Portugués</option>
+     </select>
+
+     <p class="subtitulos-curso">¿El curso tiene subtítulos?</p>
+     <select name="subtitulos" required>
+     <option value="Si">Si</option>
+     <option value="No">No</option>
+     </select>
     <textarea class="contact-form-text" name="descripcion" required>@Model.Descripcion</textarea>
     <input type="submit" class="contact-form-btn" value="Editar Curso">
 </form>
