--- a/Views/Curso/VerCurso.cshtml
+++ b/Views/Curso/VerCurso.cshtml
@@ -14,7 +14,7 @@
                     </div>
                     <hr>
                     <div class="titulos-display">
-                        <p>Por cifras</p>
+                        <p>Datos curso</p>
                         <div class="margin-text">
                             <p>Idioma: @Model.Idioma</p>
                             <p>Cantidad de clases: @Model.CantidadVideos</p>
