--- a/Views/Home/Contacto.cshtml
+++ b/Views/Home/Contacto.cshtml
@@ -37,6 +37,6 @@
     <input type="text" class="contact-form-text" name="numTelefono" placeholder="Número de teléfono...">
     <input type="text" class="contact-form-text" name="motivo" placeholder="Motivo...">
     <textarea class="contact-form-text" name="mensaje" placeholder="Dejá tu mensaje..."></textarea>
-    <input type="submit" class="contact-form-btn" value="Send">
+    <input type="submit" class="contact-form-btn" value="Enviar Consulta">
   </form>
 </div>
