--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
         <p class="parrafoCursos">
             Accedé a los mejores cursos del mercado en nuestra plataforma.<br>¿Querés obtener mayor información? 
             <br>
-            <button type="button" class="btnSaberMas btn-danger">SABER MÁS</button>
+            <a href="/curso/cursos" class="btnSaberMas btn-danger">SABER MÁS</a>
          </p>
     </div>
 </section>
