--- a/Views/Shared/_LayoutAdministrador.cshtml
+++ b/Views/Shared/_LayoutAdministrador.cshtml
@@ -44,6 +44,10 @@
                         </li>
 
                         <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Curso" asp-action="NuevoCurso">Nuevo Curso</a>
+                        </li>
+
+                        <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Deslogear">Log Out</a>
                         </li>
                     </ul>
