--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -58,19 +58,19 @@
   <div class="row">
 
     <div class="col-lg-3 col-md-6 col-sm-12">
-      <a href="/curso/cursos"><img src="~/img/BaseDeDatos.png" alt="" class="imgCategorias"></a>
+      <a href="#"><img src="~/img/BaseDeDatos.png" alt="" class="imgCategorias"></a>
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-12">
-      <a href="/curso/cursos"><img src="~/img/GamesDev.png" alt="" class="imgCategorias"></a>
+      <a href="#"><img src="~/img/GamesDev.png" alt="" class="imgCategorias"></a>
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-12">
-      <a href="/curso/cursos"><img src="~/img/MobileDev.png" alt="" class="imgCategorias"></a>
+      <a href="#"><img src="~/img/MobileDev.png" alt="" class="imgCategorias"></a>
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-12">
-      <a href="/curso/cursos"><img src="~/img/WebDev.png" alt="" class="imgCategorias"></a>
+      <a href="#"><img src="~/img/WebDev.png" alt="" class="imgCategorias"></a>
     </div>
   </div>
 
